app/styles/main.scss
body{
  margin: 0;
  padding: 0;
  width: 100%;
  font-family: 'Raleway';
  font: sans-serif;
}

h1 {
  font-family:"Raleway";
  font-weight: normal;
  font-size: 55px;
  text-align: center;
  color: #fff;
  margin: 0;
  padding: 0;
}

h2 {
  font-family:"Raleway";
  font-weight: normal;
  font-size: 40px;
  text-align: center;
  color: #fff;
  margin: 0;
  padding: 0;
}

h3 {
  font-family: 'Raleway';
  font-weight: normal;
  font-size: 16px;
  text-align: center;
  margin: 5px 0;
  padding: 0;
  z-index: 1;
  position: relative;
}

h5 {
  font-family: 'Raleway';
  font-weight: lighter;;
  font-size: 16px;
  text-align: center;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: relative;;
}

.center { margin: 0 auto; }

.content{ margin: 0 auto; width: 960px; display: inline;}

.clear { clear: both; }

#header {
  width: 100%;
  height: 80px;
  position: fixed;
  margin-top: 0px;
  background-color: rgba(5, 5, 5, 0.8);
  z-index: 100;
}

#nav { max-width: 410px; width: 100%; float: right; margin-top: 20px; }

#logo a { color: #94a4a4; text-decoration: none; float: left; font-size: 30px; margin-top: 20px; margin-left: 50px; color: #94a4a4; font-family:"Raleway"; }

#nav ul{
  list-style: none;
  display: block;
  margin: 0 auto;
  list-style: none;
}

#nav li{
  margin-top: 9px;
  float: left;
  padding-left: 21px;
  font-weight: bold;
}

#nav li a { color: #94a4a4; opacity:1; font-size: 16px; text-decoration: none; font-family: 'Raleway'; }
#nav li a.active { color: #94a4a4; opacity:1; }
#nav li a:hover { color: #94a4a4; opacity:1; }

#linkss {
  color: #fff;
  text-decoration: underline;
}

#linksP {
  color: #94a4a4;
}

#linksL {
  color: #94a4a4;
  font-size: 17px;
  text-decoration: none;
  justify-content: center;
  margin-right: 10px;
}

#linkR {
  color: #fff;
}

.links {
  justify-content: center;
}

#port, #fifa, #meantea, #reddit {
  max-width: 200px;
  max-height: 400px;
  margin: 0;
}

#mail {
  max-width: 32px;
  max-height: 32px;
  color: #94a4a4;
  justify-content: center;
}

#github {
  max-width: 23px;
  max-height: 23px;
  color: #94a4a4;
  justify-content: center;
}

#linked {
  max-width: 23px;
  max-height: 23px;
  color: #94a4a4;
  padding-bottom: 5px;
  justify-content: center;
}

.pix {
  margin: 0px;
  padding: 0;
}

.quotes {
  font-family: 'Raleway', serif;
  font-weight: normal;
  font-size: 30px;
  text-align: center;
  margin: 25px auto;
}

.quotes_container { width: 100%; max-width: 900px; margin: 0 auto; }
.resume_container { width: 100%; max-width: 900px; height: 90%; margin: 0 auto; }

#about, #resume{ width: 100%; filter: brightness(90%);}

#about{
  background: url('../images/13606918_10154440087870337_7262751828488941842_n.jpg') 50% 0 no-repeat fixed;
  color: #fff;
  height: 600px;
  margin: 0;
  padding: 200px 0 260px 0;
  background-size: cover;
}

#projects{
  background-color: #fff;
  color: #94a4a4;
  height: 500px;
  margin: 0 auto;
  overflow: auto;
  // padding: 200px 0;
}

#resume{
  background: url('../images/13606918_10154440087870337_7262751828488941842_n.jpg') 50% 0 no-repeat fixed;
  color: #fff;
  height: 600px;
  padding: 25px 0 0 0;
  background-size: cover;
}

.resume {
  width: 100%;
  height: 90%;
  margin: 0 auto;
}

#contact{
  background-color: #fff;
  color: #94a4a4;
  height: 100px;
  padding: 200px 0;
  text-align: center;
}

// .footer {
//   padding-top: 20px;
// }

#copyright { color: #94a4a4; font-family:"Raleway"; font-size: 14px; margin-top: 50px; text-align: center; }
#copyright a { text-decoration: none; color: #94a4a4; }






// $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
// // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
//
// .browsehappy {
//   margin: 0.2em 0;
//   background: #ccc;
//   color: #000;
//   padding: 0.2em 0;
// }
//
// body {
//   padding: 0;
// }
//
// /* Everything but the jumbotron gets side spacing for mobile first views */
// .header,
// .marketing,
// .footer {
//   padding-left: 15px;
//   padding-right: 15px;
// }
//
// /* Custom page header */
// .header {
//   border-bottom: 1px solid #e5e5e5;
//   margin-bottom: 10px;
//
//   /* Make the masthead heading the same height as the navigation */
//   h3 {
//     margin-top: 0;
//     margin-bottom: 0;
//     line-height: 40px;
//     padding-bottom: 19px;
//   }
// }
//
// /* Custom page footer */
// .footer {
//   padding-top: 19px;
//   color: #777;
//   border-top: 1px solid #e5e5e5;
// }
//
// .container-narrow > hr {
//   margin: 30px 0;
// }
//
// /* Main marketing message and sign up button */
// .jumbotron {
//   text-align: center;
//   border-bottom: 1px solid #e5e5e5;
//
//   .btn {
//     font-size: 21px;
//     padding: 14px 24px;
//   }
// }
//
// /* Supporting marketing content */
// .marketing {
//   margin: 40px 0;
//
//   p + h4 {
//     margin-top: 28px;
//   }
// }
//
// /* Responsive: Portrait tablets and up */
// @media screen and (min-width: 768px) {
//   .container {
//     max-width: 730px;
//   }
//
//   /* Remove the padding we set earlier */
//   .header,
//   .marketing,
//   .footer {
//     padding-left: 0;
//     padding-right: 0;
//   }
//   /* Space out the masthead */
//   .header {
//     margin-bottom: 30px;
//   }
//   /* Remove the bottom border on the jumbotron for visual effect */
//   .jumbotron {
//     border-bottom: 0;
//   }
// }

